# correlation_engine

./: .gitignore  Cargo.toml  README.md  SDD_engine.md  SESSION-CONTEXT.md  build-engine-kernel-lib.cmd  edr-inline-detection-design.md  engine.md  engine_endpoint_backend.md  engine_endpoint_backend_walkthrough.html  engine_state_optimization.md  engine_walkthrough.html
backend_service/: Cargo.toml  README.md
backend_service/src/: lib.rs  main.rs
backend_service/tests/: ingest.rs
bak/: SESSION-CONTEXT.md  engine_backend_split.md  engine_backend_split_walkthrough.html
docs/: BRD.md  SDD_endpoint.md  SDD_engine.md  SRS.md  TKTT.md  artifact-design.md  engine_base.html  engine_base.md  engine_v0.0.1.html  engine_v0.0.1.md  engine_v0.0.2.html  engine_v0.0.2.md  replay.md  sensor-design.html  todo.md
endpoint_service/: Cargo.toml  README.md
endpoint_service/rules/: dag.rules  lsass_pattern.rules
endpoint_service/src/: control.rs  lib.rs  main.rs  ring.rs  ringbuf.rs  sensor.rs  source.rs  translate.rs  winport.rs
endpoint_service/tests/: integration.rs
engine/: Cargo.toml  README.md
engine/datasets/: benign_write_exec_different.evt  ransomware_reordered.evt
engine/rules/: lsass_dump.rules
engine/src/: backend.rs  dataset.rs  endpoint.rs  event.rs  lib.rs  main.rs  wire.rs
engine/tests/: detection.rs  eb.rs
engine_core/: Cargo.toml
engine_core/include/: engine.h
engine_core/src/: base.rs  detector.rs  engine.rs  event.rs  ffi.rs  lib.rs  rules.rs  v0_0_1.rs  v0_0_2.rs  v0_0_2_bounded.rs  wire.rs
engine_eb/: Cargo.toml  README.md
engine_eb/src/: backend.rs  endpoint.rs  lib.rs  main.rs  wire.rs
engine_eb/tests/: eb.rs
engine_replay/: Cargo.toml
engine_replay/rules/: ransomware.rules  ransomware_dag.rules
engine_replay/src/: lib.rs  main.rs
engine_replay/tests/: replay.rs
engine_rules/: Cargo.toml
engine_rules/src/: lib.rs
proto/: Cargo.toml  README.md  build.rs  wire.proto
proto/src/: lib.rs
proto/tests/: proto_codec.rs
sensor/windows_driver/: Cargo.toml  Sensor.sln  SnsDrv.inx  build.rs  makefile.toml  package.ps1  readme.md  rust-toolchain.toml
sensor/windows_driver/.cargo/: config.toml
sensor/windows_driver/SnsDrv/: ArmTable.cpp  ArmTable.hpp  Callbacks.cpp  EnforcementPlane.md  Engine.cpp  Engine.hpp  EngineRt.cpp  Entry.cpp  Event.hpp  MiniFilter.cpp  MiniFilter.hpp  Network.cpp  ProcessMonitor.cpp  ProcessMonitor.hpp  ProcessMonitor.md  SnsDrv.inf  SnsDrv.vcxproj  SnsDrv.vcxproj.filters  WPF.cpp  Worker.cpp  Worker.hpp  readme.md
sensor/windows_driver/src/: engine.rs  event.rs  fltmgr.rs  lib.rs  log.rs  minifilter.rs  port.rs
sensor/windows_driver2/SnsDrv/: Entry.cpp  Ring.cpp  Ring.hpp  SnsDrv.vcxproj  readme.md
v1/: engine.html  engine.md  engine_state_optimization.md  engine_walkthrough.html
v1/engine/datasets/: benign_installer_write_exec_same.evt  lsass_dump.evt  ransomware.evt
v1/engine/rules/: builtin.rules
v1/engine/src/: lib.rs  pattern.rs  rules.rs
